--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cvapp_front",
+  "name": "cvapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,8 +10,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^6.1.8"
   },
   "scripts": {
     "start": "set PORT=5101 && react-scripts start",
